<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="121dp"
        android:layout_height="27dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="60dp"
        android:text="@string/calculator"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNumber1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:autofillHints="number"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/valueZero"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etNumber2"
        app:layout_constraintStart_toEndOf="@+id/etNumber1"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="number"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/valueZero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <TextView
        android:id="@+id/tvNumber1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/number1"
        app:layout_constraintBottom_toTopOf="@+id/rgOperations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber2" />

    <TextView
        android:id="@+id/tvNumber2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/number2"
        app:layout_constraintBottom_toTopOf="@+id/rgOperations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber1" />

    <RadioGroup
        android:id="@+id/rgOperations"
        android:layout_width="381dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="53dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber2"
        app:layout_constraintVertical_bias="0.45">

        <RadioButton
            android:id="@+id/rbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <RadioButton
            android:id="@+id/rbSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction" />

        <RadioButton
            android:id="@+id/rbMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/rbDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide" />
    </RadioGroup>

    <Button
        android:id="@+id/bCalculate"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="75dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOperations" />

    <Button
        android:id="@+id/bDelete"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="60dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOperations" />

    <Button
        android:id="@+id/bSave"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCalculate" />

    <Button
        android:id="@+id/bShow"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bDelete" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/total"
        app:layout_constraintEnd_toStartOf="@+id/tvResult"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSave" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bShow" />
</androidx.constraintlayout.widget.ConstraintLayout>